fix layout issue in portal manage

--- a/sass/old-portal-manage-add.sass
+++ b/sass/old-portal-manage-add.sass
@@ -4,12 +4,10 @@
     top: 50%
     left: 50%
     +transform(translate(-50%,-50%))
-  
+
 
 #portal-constrain
-    position: static
-#portal-constrain
-    position: static
+    top: 220px
 #portal-list
     position: static
     .channel-list
